<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="title_activity_about_alc">About_alc</string>
    <string name="name">Emery Bashige</string>
    <string name="track_android">Track: Android</string>
    <string name="country_of_origin">Country of origin: DRC</string>
    <string name="email">Email: bemeryb@gmail.com</string>
    <string name="country_of_residence">Country of residence: Kenya</string>
    <string name="phone_number">Phone Number: +254 789 647563</string>
    <string name="slack_username">Slack Username: @Emery B.</string>
    <string name="about_">About ALC</string>
</resources>
